Fix equipments collapse

--- a/src/assets/scss/_common.scss
+++ b/src/assets/scss/_common.scss
@@ -120,6 +120,11 @@
         color: $color-red;
         line-height: 1.6;
     }
+
+    &-text span {
+        display: block;
+        width: 100% !important;
+    }
 }
 
 .rotate {
